unpackaged/main/default/objects/Product_Filter_Lookup__c/Product_Filter_Lookup__c.object-meta.xml
<CustomObject>
    <label>Product Filter Lookup</label>
    <nameField>
        <displayFormat>PFL-{0000000}</displayFormat>
        <label>Product Filter Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Filter Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>