unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/AlternativeSellServiceQualified__c.field-meta.xml
<CustomField>
    <fullName>AlternativeSellServiceQualified__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WHERE Type__c = &#39;Alternative&#39; AND Status__c = &#39;Sell/Service&#39;</description>
    <label>AlternativeSellServiceQualified</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Sell/Service</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Asset_Category__c</field>
            <operation>equals</operation>
            <value>Alternative Investment</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (AlternativeSellServiceQualfied)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups3</relationshipName>
    <type>Lookup</type>
</CustomField>