unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/AlternativeSellServiceSuitable__c.field-meta.xml
<CustomField>
    <fullName>AlternativeSellServiceSuitable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WHERE Type__c = &#39;Alternative&#39; AND Status__c = &#39;Sell/Service&#39; AND (Accreditation_Status__c = &#39;None&#39; OR Accreditation_Status__c = &#39;Suitable&#39;)</description>
    <label>AlternativeSellServiceSuitable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Sell/Service</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Suitable, None</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Asset_Category__c</field>
            <operation>equals</operation>
            <value>Alternative Investment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (AlternativeSellServiceSuitable)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups1</relationshipName>
    <type>Lookup</type>
</CustomField>