unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/AlternativeServiceNone__c.field-meta.xml
<CustomField>
    <fullName>AlternativeServiceNone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WHERE Type__c = &#39;Alternative&#39; AND (Status__c = &#39;Sell/Service&#39; OR Status__c = &#39;Service Only&#39;) AND Accreditation_Status__c = &#39;None&#39;</description>
    <label>AlternativeServiceNone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>None</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Sell/Service, Service Only</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Asset_Category__c</field>
            <operation>equals</operation>
            <value>Alternative Investment</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (AlternativeServiceNone)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups4</relationshipName>
    <type>Lookup</type>
</CustomField>