unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/AlternativeServiceQualified__c.field-meta.xml
<CustomField>
    <fullName>AlternativeServiceQualified__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WHERE Type__c = &#39;Alternative&#39; AND Status__c = &#39;Service&#39;</description>
    <label>AlternativeServiceQualified</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Sell/Service, Service Only</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Asset_Category__c</field>
            <operation>equals</operation>
            <value>Alternative Investment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (AlternativeServiceQualified)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups7</relationshipName>
    <type>Lookup</type>
</CustomField>