unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/Households_Filtered_to_Entity_HHs__c.field-meta.xml
<CustomField>
    <fullName>Households_Filtered_to_Entity_HHs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Households Filtered to Entity HHs</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Entity_Type__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Filter Lookups (Households Filtered to Entity HHs)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups1</relationshipName>
    <type>Lookup</type>
</CustomField>