unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Filter Lookups (Person Account)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups2</relationshipName>
    <type>Lookup</type>
</CustomField>