unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/Trusted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trusted Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Entity_Type__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Filter Lookups (Trusted Contact)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups3</relationshipName>
    <type>Lookup</type>
</CustomField>