unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/Variable_Annuity__c.field-meta.xml
<CustomField>
    <fullName>Variable_Annuity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variable Annuity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Financial_Account__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Variable Annuity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (Variable Annuity)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups1</relationshipName>
    <type>Lookup</type>
</CustomField>