unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/VariableAnnuityServiceNone__c.field-meta.xml
<CustomField>
    <fullName>VariableAnnuityServiceNone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WHERE Type__c = &#39;Variable Annuity&#39; AND (Status__c = &#39;Sell/Service&#39; OR Status__c = &#39;Service Only&#39;)</description>
    <label>VariableAnnuityServiceNone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Sell/Service, Service Only</value>
        </filterItems>
        <filterItems>
            <field>Product__c.Asset_Category__c</field>
            <operation>equals</operation>
            <value>Variable Annuity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Product Filter Lookups (VariableAnnuityServiceNone)</relationshipLabel>
    <relationshipName>Product_Filter_Lookups0VP6</relationshipName>
    <type>Lookup</type>
</CustomField>