unpackaged/main/default/objects/Product_Filter_Lookup__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Product Filter Lookups</relationshipLabel>
    <relationshipName>Product_Filter_Lookups</relationshipName>
    <type>Lookup</type>
</CustomField>